# learn-sfml-source

./: .clangd  .gitignore  CMakeLists.txt  README.md
SFML-2.0/: CMakeLists.txt
src/: main.cpp
